# minesweeper

./: pyproject.toml  requirements.txt
.github/workflows/: pytest-ci.yml
app/: app.py
src/minesweeper/: .pre-commit-config.yaml  minesweeper.py
tests/: olivier_test_minesweeper.txt  test_minesweeper.py
