[project]
name = "minesweeper"
version = "0.1.0"
description = ""
authors = [
    {name = "Olivier Gozlan",email = "olivier.gozlan75@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "minesweeper", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
