[project]
name = "minesweeper"
version = "0.1.0"
description = ""
authors = [
    {name = "Olivier Gozlan",email = "olivier.gozlan75@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask (>=3.1.2,<4.0.0)"
]

[tool.poetry]
packages = [{include = "minesweeper", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.9"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310" # Python version (examples: 39 for 3.9, 310 for 3.10, etc.)
line-length = 120 # Maximum line-length for formatting
exclude = [ # Scripts or folders to exclude from linting/formatting
    "bin", # ignore whole folder
    "guidelines", # ignore all markdown files in folder
    "notebooks" ,# ignore specific file
    "tests" ,
    "validation_test",
    "docs",
    "site"
]

[tool.ruff.lint]
ignore = [ # Rules to ignore. In this example these are all docstring (D) related rules.
    "S113", # Usage of requests without timeout.
    "N803", # Argument name should be lowercase (Will be an issue for X_train, X_test naming convention).
    "N806" # Variable in function should be lowercase (Will be an issue for the same reason as N803).
]
select = [ # Sets of rules to check for
    "I",    # isort
    "S",    # bandit
    "E",    # pycodestyle
    "W",    # pycodestyle
    "N",    # pep8-naming
    "F",    # flake8
    "T20",  # flake8-print
    "ANN",  # flake8-annotations
    "ARG"   # flake8-unused-arguments
]

#pour l'erreur sur le random dans le fichier minesweeper.py
[tool.ruff.lint.per-file-ignores]
"src/minesweeper/minesweeper.py" = ["S311"]

[tool.pytest.ini_options]
pythonpath = ["src"]
